# vaiVulkan

./: .gitignore  CMakeLists.txt  README.md  compile.bat
shaders/: simple_shader.vert
src/: first_app.cpp  first_app.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  lve_window.hpp  main.cpp  main.cpp.old
